--- a/src/main/java/PacoteInterfaceVisual/PaginaPerfilConfiguracoes.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaPerfilConfiguracoes.form
@@ -73,7 +73,7 @@
                   <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="BotaoRecarregarCelular" min="-2" max="-2" attributes="0"/>
+                          <Component id="BotaoAlterarDados" min="-2" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
                                   <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
@@ -92,7 +92,7 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
-                          <Component id="BotaoSeguranca1" min="-2" pref="138" max="-2" attributes="0"/>
+                          <Component id="BotaoExcluirConta" min="-2" pref="138" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
@@ -119,7 +119,7 @@
                   <Component id="PerfilConfiguracoes" min="-2" pref="22" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="BotaoRecarregarCelular" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
+                      <Component id="BotaoAlterarDados" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
                       <Component id="BotaoSeguranca" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
                       <Component id="BotaoDadosPessoais" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
                   </Group>
@@ -130,7 +130,7 @@
                       <Component id="BotaoSair" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="94" max="32767" attributes="0"/>
-                  <Component id="BotaoSeguranca1" min="-2" pref="14" max="-2" attributes="0"/>
+                  <Component id="BotaoExcluirConta" min="-2" pref="14" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -156,7 +156,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PerfilConfiguracoesActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="BotaoRecarregarCelular">
+        <Component class="javax.swing.JButton" name="BotaoAlterarDados">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="0" red="cc" type="rgb"/>
@@ -167,11 +167,11 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Recarregar Celular"/>
+            <Property name="text" type="java.lang.String" value="Alterar Dados"/>
             <Property name="borderPainted" type="boolean" value="false"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoRecarregarCelularActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoAlterarDadosActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="IconeLogo">
@@ -310,7 +310,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoSairActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="BotaoSeguranca1">
+        <Component class="javax.swing.JButton" name="BotaoExcluirConta">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="12" style="1"/>
@@ -319,7 +319,7 @@
             <Property name="borderPainted" type="boolean" value="false"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoSeguranca1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoExcluirContaActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
