--- a/src/main/java/PacoteInterfaceVisual/PaginaRedefinirSenha.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaRedefinirSenha.form
@@ -66,7 +66,7 @@
                       </Group>
                       <Component id="ConfirmarNovaSenha" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                          <Component id="BotaoEntrarSenha" min="-2" max="-2" attributes="0"/>
+                          <Component id="BotaoConfirmar" min="-2" max="-2" attributes="0"/>
                           <Component id="CampoInserirConfirmacaoSenha" min="-2" pref="220" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -77,7 +77,7 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="139" max="32767" attributes="0"/>
                   <Component id="InformeSuaSenha" min="-2" pref="34" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="CampoInserirNovaSenha" min="-2" pref="34" max="-2" attributes="0"/>
@@ -85,8 +85,8 @@
                   <Component id="ConfirmarNovaSenha" min="-2" pref="34" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="CampoInserirConfirmacaoSenha" min="-2" pref="34" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
-                  <Component id="BotaoEntrarSenha" min="-2" pref="46" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
+                  <Component id="BotaoConfirmar" min="-2" pref="47" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -125,7 +125,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoInserirNovaSenhaActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="BotaoEntrarSenha">
+        <Component class="javax.swing.JButton" name="BotaoConfirmar">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="0" red="cc" type="rgb"/>
@@ -140,7 +140,7 @@
             <Property name="borderPainted" type="boolean" value="false"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoEntrarSenhaActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoConfirmarActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="ConfirmarNovaSenha">
